Fix uneven card heights and missing link hover effects

--- a/src/app/posts/posts-carousel/posts-carousel.component.scss
+++ b/src/app/posts/posts-carousel/posts-carousel.component.scss
@@ -59,6 +59,10 @@
             .content {
                 padding: 1em;
                 min-height: 245px;
+                max-height: 320px;
+                overflow: hidden;
+                display: flex;
+                flex-direction: column;
 
                 h2.title {
                     margin-top: 0;
@@ -66,11 +70,13 @@
                     font-weight: 600;
                     font-size: 18px;
                     text-align: left;
+                    flex-shrink: 0;
 
                     a {
                         text-decoration: none !important;
                         color: inherit !important;
                         transition: all 0.2s ease-in-out;
+                        display: inline;
 
                         &:hover {
                             text-decoration: underline !important;
@@ -83,7 +89,7 @@
                             vertical-align: super;
                             margin-left: 2px;
                             opacity: 0;
-                            transition: all 0.2s ease-in-out;
+                            transition: opacity 0.2s ease-in-out;
                         }
                     }
                 }
@@ -94,6 +100,13 @@
                     color: #5e6788;
                     text-align: left;
                     line-height: 1.5em;
+                    margin-bottom: 0;
+                    flex-grow: 1;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 4;
+                    -webkit-box-orient: vertical;
                 }
             }
 
